--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!-- atrykuł -->
-<article> 
+    <article>
 
-    <!-- Nagłówek -->
-    <h1>Główny Tytuł</h1> 
+        <!-- Nagłówek -->
+        <h1>Główny Tytuł</h1>
 
-    <!-- Paragraf -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Vel neque atque necessitatibus reprehenderit maxime deserunt, illum cumque ratione facere quisquam. 
-        <br>Facilis architecto incidunt veniam enim animi voluptates explicabo accusantium sapiente.</p>
+        <!-- Paragraf -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Vel neque atque necessitatibus reprehenderit
+            maxime deserunt, illum cumque ratione facere quisquam.
+            <br>Facilis architecto incidunt veniam enim animi voluptates explicabo accusantium sapiente.
+        </p>
 
-<!-- Podtytuł nr 2 -->
-<h2>Podtytuł</h2> 
+        <!-- Podtytuł nr 2 -->
+        <h2>Podtytuł</h2>
 
-<!-- Paragraf nr 2 -->
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Quas saepe, dolorem fuga eius quaerat pariatur sunt obcaecati voluptatem sapiente, neque ipsa. <br>Nemo aliquid unde suscipit voluptate hic itaque magnam voluptas?</p> 
+        <!-- Paragraf nr 2 -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Quas saepe, dolorem fuga eius quaerat pariatur
+            sunt obcaecati voluptatem sapiente, neque ipsa. <br>Nemo aliquid unde suscipit voluptate hic itaque magnam
+            voluptas?</p>
 
-<!-- Podtytuł nr 3 -->
-<h3>Podtytuł 2</h3> 
-<!-- Obrazek -->
+        <!-- Podtytuł nr 3 -->
+        <h3>Podtytuł 2</h3>
+        <!-- Obrazek -->
 
-<img src="C:\Users\Jacek\Documents\GitHub\14-html-elementy-komentarze\dragon.jpg" alt="Dragon"> 
-</article>
+        <img src="dragon.jpg" alt="Dragon">
+    </article>
 
 
 
@@ -37,4 +43,5 @@
 
 
 </body>
+
 </html>
